--- a/app/src/main/res/layout/fragment_story.xml
+++ b/app/src/main/res/layout/fragment_story.xml
@@ -6,6 +6,19 @@
     android:layout_height="match_parent"
     tools:context=".ui.StoryFragment">
 
+    <ImageView
+        android:id="@+id/empty_image_view"
+        android:layout_width="180dp"
+        android:layout_height="180dp"
+        android:src="@drawable/ic_empty"
+        android:contentDescription="@string/image_container"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.5" />
+
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/story_recycler_view"
         android:layout_width="0dp"
@@ -20,9 +33,9 @@
 
     <ProgressBar
         android:id="@+id/progress_bar"
-        android:visibility="gone"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
